deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servidor-c-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: servidor-c
  template:
    metadata:
      labels:
        app: servidor-c
    spec:
      containers:
      - name: servidor-c
        image: psiquedelos/servidor-c:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: servidor-c-service
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: servidor-c
